crates/vm/tests/snapshots/object_load_keyed__nested_unknown_opt.snap
---
source: crates/vm/tests/object_load_keyed.rs
expression: snapshot
---
# Input:
v := { a: {} }
print ?v["a"]["b"]


# Result (success):
none

# Stdout:
none

