crates/vm/tests/snapshots/object_load_keyed__unknown.snap
---
source: crates/vm/tests/object_load_keyed.rs
expression: snapshot
---
# Input:
v := {}
print v["a"]


# Result (error):
[31merror[0m in code: cannot get field `"a"` on value `{}`


# Stdout:

