crates/vm/tests/snapshots/object_load_keyed__unknown_opt_nested.snap
---
source: crates/vm/tests/object_load_keyed.rs
expression: snapshot
---
# Input:
v := { a: { b: 10 } }
print ?v["a"]["b"]


# Result (success):
none

# Stdout:
10

